feat: implement FJ-30 reels flow
